--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,11 @@
         {# include header #}
         {% include 'partials/header.html.twig' %}
         
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% if (app.session.flashbag.peek('success')|length >0) or (app.session.flashbag.peek('error')|length >0) %}
+                <h1>j'ai bien un message</h1>
+            {% endif %}
+        {% endblock %}
          
         {# include footer #}
         {% include 'partials/footer.html.twig' with {'positionFooter' : 'relative'} %}
