--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,34 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('js/app') }}
+            {# flash message management with toastr #}
+            {% if (app.session.flashbag.peek('success')|length >0) or (app.session.flashbag.peek('error')|length >0) %}
+                <script>
+                    toastr.options = {
+                        "closeButton": true,
+                        "debug": false,
+                        "newestOnTop": false,
+                        "progressBar": true,
+                        "positionClass": "toast-top-left",
+                        "preventDuplicates": false,
+                        "onclick": null,
+                        "showDuration": "300",
+                        "hideDuration": "1000",
+                        "timeOut": "5000",
+                        "extendedTimeOut": "1000",
+                        "showEasing": "swing",
+                        "hideEasing": "linear",
+                        "showMethod": "fadeIn",
+                        "hideMethod": "slideUp",
+                        'escapeHtml': true
+                    }
+                </script>
+                {% for label, messages in app.flashes(['success', 'error']) %}
+                    {% for message in messages %}    
+                        <script>toastr["{{ label }}"]("{{ message|trans }}")</script>
+                    {% endfor %}
+                {% endfor %}
+            {% endif %}
         {% endblock %}
     </body>
 </html>
