--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -9,10 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <div class="navbar-nav">
             {% if app.user %}
-                <a class="nav-link" href="#">
-                    <i class="fas fa-envelope-open"></i>&nbsp;Messages
-                    <span class="badge-pill badge-dark">9</span>
-                </a>
+                <a class="nav-link" href="#"><i class="fas fa-envelope-open"></i>&nbsp;Messages</a>
                 <a class="nav-link" href="#"><i class="fas fa-plane-departure"></i>&nbsp;Mes BizTrip</a>
             {% else %}
                 <a class="nav-item nav-link active" href="#">{{ 'menu.home_home'|trans }} <span class="sr-only">(current)</span></a>
