--- a/assets/css/mainPage.scss
+++ b/assets/css/mainPage.scss
@@ -3,6 +3,7 @@
 
 // Colors
 $happyDarkBlue: #7fadc5;
+$happyBlue: #415ba5;
 $HappyPurple: #3f4253;
 $happyOrange: #f5853b;
 $happyGrey: #f5f5f5;
@@ -15,7 +16,7 @@ $happyGrey: #f5f5f5;
 }
 
 .col-text-profile {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   margin-bottom: 0.5rem;
 }
 
@@ -25,4 +26,18 @@ $happyGrey: #f5f5f5;
   margin: 0.2rem;
   margin-top: 0.4rem;
   /* border-radius: 20px; */
+}
+
+.btn-register {
+  background-color: $happyDarkBlue;
+  color: #ffffff;
+  font-weight: 400;
+  &:hover {
+      background-color: $happyBlue;
+      color: #ffffff;
+  }
+}
+
+.row.row-dashboard:hover {
+  background-color: $happyGrey;
 }
