--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -4,21 +4,49 @@
 {% block stylesheets %}
     {{ parent() }}
     {{ encore_entry_link_tags('css/mainPage') }}
+    <style>
+        .badge-blue {
+            background-color: #7fadc5;
+            color: #ffffff;
+        }
+    </style>
 {% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="row">
-            {# diplay the profile info #}
-            {% include './partials/_profileInfo.html.twig' %}   
-            <div class="col col-lg-6">
-                <h1 class="text-center">Derniers articles</h1>
-            </div>
-            <div class="col col-lg-3">
-                <h1 class="text-center">Derniers articles</h1>
-            </div>
-        </div>
+  <div class="container">
+    <div class="d-flex justify-content-center pt-2">
+      <div class="row">
+          {# diplay the profile info #}
+          {% include './partials/_profileInfo.html.twig' %}   
+          <div class="col col-lg-6 col-md-6">
+              <div class="card mt-3">
+                  <div class="card-header">
+                    Quote
+                  </div>
+                  <div class="card-body">
+                    <blockquote class="blockquote mb-0">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                      <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                    </blockquote>
+                  </div>
+              </div>
+          </div>
+          <div class="col col-lg-3 col-md-3">
+              <div class="card mt-3">
+                  <div class="card-header">
+                    Quote
+                  </div>
+                  <div class="card-body">
+                    <blockquote class="blockquote mb-0">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                      <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                    </blockquote>
+                  </div>
+              </div>
+          </div>
+      </div>
     </div>
+  </div>
         
 {% endblock %}
 {% block javascripts %}
