--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -41,7 +41,7 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
                     <a href="#" class="dropdown-item">Créer un BizTrip</a>
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">Mon profil</a>
+                    <a href="{{ path('hbt_profile', {'id':app.user.id}) }}" class="dropdown-item">Mon profil</a>
                     <a href="#" class="dropdown-item">Mon abonnement</a>
                     <a href="#" class="dropdown-item">Modifier mon mot de passe</a>
                     <div class="dropdown-divider"></div>
