build profile form 1

--- a/assets/css/mainPage.scss
+++ b/assets/css/mainPage.scss
@@ -41,3 +41,9 @@ $happyGrey: #f5f5f5;
 .row.row-dashboard:hover {
   background-color: $happyGrey;
 }
+
+.badge-blue {
+  background-color: #7fadc5;
+  color: #ffffff;
+  font-weight: normal;
+}
