--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,20 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProfileController!{% endblock %}
+{% block title %}{{ 'profile.block_title'|trans }}{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('css/mainPage') }}
+    <style>
+        .card-profile {
+            width: 100%;
+            text-align: center;
+        }
+        .card-profile-header-avatar {
+            background-color: #7fadc5;
+            border-color: #7fadc5;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/fparment/wamp64/www/HappyBizTrip/src/Controller/ProfileController.php'|file_link(0) }}">src/Controller/ProfileController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/fparment/wamp64/www/HappyBizTrip/templates/profile/index.html.twig'|file_link(0) }}">templates/profile/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="container">
+        <div class="d-flex justify-content-center pt-2">
+            <div class="card card-profile">
+                <div class="card-header card-profile-header-avatar">
+                    <img src="{{ user.avatar }}" class="avatar" alt="Avatar de {{ user.pseudo }}">
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center pt-2">
+            <div class="card card-profile mt-2">
+                <div class="card-header text-left"><i class="far fa-address-card"></i>  Informations Générales</div>
+                <div class="card-body">
+                    toto
+                </div>
+            </div>
+        </div>
+    </div>
+    
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
 {% endblock %}
