build profile form 1.1

--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -3,16 +3,9 @@
 {% block title %}{{ 'profile.block_title'|trans }}{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    {{ encore_entry_link_tags('css/mainPage') }}
+    {{ encore_entry_link_tags('css/profile') }}
     <style>
-        .card-profile {
-            width: 100%;
-            text-align: center;
-        }
-        .card-profile-header-avatar {
-            background-color: #7fadc5;
-            border-color: #7fadc5;
-        }
+       
     </style>
 {% endblock %}
 
