--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -43,7 +43,7 @@
                     <div class="dropdown-divider"></div>
                     <a href="{{ path('hbt_profile', {'id':app.user.id}) }}" class="dropdown-item">Mon profil</a>
                     <a href="#" class="dropdown-item">Mon abonnement</a>
-                    <a href="#" class="dropdown-item">Modifier mon mot de passe</a>
+                    <a href="#" class="dropdown-item">Changer mon mot de passe</a>
                     <div class="dropdown-divider"></div>
                     <a href="{{ path('hbt_logout') }}" class="dropdown-item">Deconnexion</a>
                 </div>
