implementation of CKEditor

--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -49,6 +49,14 @@
             </div>
             <div class="d-flex justify-content-center pt-2">
                 <div class="card mt-2 card-profile">
+                    <div class="card-header text-left"><i class="fas fa-user-edit"></i>&nbsp;&nbsp;Description</div>
+                    <div class="card-body text-left">
+                        {{ form_widget(form.description)}}
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center pt-2">
+                <div class="card mt-2 card-profile">
                     <div class="card-header text-left"><i class="fab fa-wpexplorer"></i>&nbsp;&nbsp;Intérêts</div>
                     <div class="card-body text-left">
                         <h4 class="card-title">Primary card title</h4>
