--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -45,7 +45,7 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
                     <a href="#" class="dropdown-item">Créer un BizTrip</a>
                     <div class="dropdown-divider"></div>
-                    <a href="{{ path('hbt_profile', {'pseudo':app.user.pseudo}) }}" class="dropdown-item">Mon profil</a>
+                    <a href="{{ path('hbt_profile', {'slug':app.user.slug}) }}" class="dropdown-item">Mon profil</a>
                     <a href="#" class="dropdown-item">Mon abonnement</a>
                     <a href="#" class="dropdown-item">Changer mon mot de passe</a>
                     <div class="dropdown-divider"></div>
