add situation field for profile form

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -11,7 +11,7 @@
     <div class="d-flex justify-content-center pt-2">
       <div class="row">
           {# diplay the profile info #}
-          {% include './partials/_profileInfo.html.twig' %}   
+          {% include 'partials/_profileInfo.html.twig' %}   
           <div class="col col-lg-6 col-md-6">
               <div class="card mt-3">
                   <div class="card-header">
