--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -39,13 +39,14 @@
         <ul class="navbar-nav mr-2">
             <li class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
-                    <img src="{{ app.user.avatar }}" class="avatar avatar-mini" alt="Avatar de {{ app.user.pseudo }}">
+                    <img src={% if app.user.avatar is empty %}"{{ asset('img/library/defaultAvatar.png') }}"{% else %} "{{ app.user.avatar }}" {% endif %}
+                    class="avatar avatar-mini" alt="Avatar de {{ app.user.pseudo }}">
                     &nbsp;{{ app.user.pseudo }}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
                     <a href="#" class="dropdown-item">Créer un BizTrip</a>
                     <div class="dropdown-divider"></div>
-                    <a href="{{ path('hbt_profile', {'slug':app.user.slug}) }}" class="dropdown-item">Mon profil</a>
+                    <a href="{{ path('edit_profile', {'slug':app.user.slug}) }}" class="dropdown-item">Mon profil</a>
                     <a href="#" class="dropdown-item">Mon abonnement</a>
                     <a href="#" class="dropdown-item">Changer mon mot de passe</a>
                     <div class="dropdown-divider"></div>
