--- a/assets/css/profile.scss
+++ b/assets/css/profile.scss
@@ -7,6 +7,7 @@ $happyBlue: #415ba5;
 $HappyPurple: #3f4253;
 $happyOrange: #f5853b;
 $happyGrey: #f5f5f5;
+$happyRed: #B81A18;
 
 .card-profile {
   width: 100%;
@@ -26,12 +27,16 @@ $happyGrey: #f5f5f5;
 
 .btn {
   &.btn-profile-delete {
-      background-color: $happyOrange;
-      color: #ffffff
+    background-color: $happyOrange;
+    color: #ffffff
   }
   &.btn-profile-update {
-      background-color: $happyDarkBlue;
-      color: #ffffff;
+    background-color: $happyDarkBlue;
+    color: #ffffff;
+  }
+  &.btn-confirm-profile-delete {
+    background-color: $happyRed;
+    color: #ffffff;
   }
 }
 
