--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,6 +12,7 @@
     {% set boolEmail = false %}
     {% set boolPassword = false %}
     {% if error %}
+        <p>{{ error.messageKey }}</p>
         {% if 'Email' in error.messageKey %}
             {% set boolEmail = true %}
         {% endif %}
