--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,7 +12,7 @@
     {% set boolEmail = false %}
     {% set boolPassword = false %}
     {% if error %}
-        <p>{{ error.messageKey }}</p>
+        {# <p>{{ error.messageKey }}</p> #}
         {% if 'Email' in error.messageKey %}
             {% set boolEmail = true %}
         {% endif %}
@@ -60,7 +60,7 @@
                         <form method="POST" novalidate>
                             {% if error %}
                                 {% if boolEmail == false and boolPassword == false %}
-                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                                    <div class="alert alert-danger text-center">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                                 {% endif %}
                             {% endif %}
                         
